j'ai mis la nav

--- a/ListeDePrenom/index.html
+++ b/ListeDePrenom/index.html
@@ -4,8 +4,16 @@
 	<title>Liste de prénom</title>
 </head>
 <body>
+	<header>
+		<nav>
+			<a href="#">A</a>
+			<a href="#">B</a>
+			<a href="#">C</a>
+		</nav>
+	</header>
 	<ul>
 		<li>Damien</li>
+		<li>Grégoire</li>
 	</ul>
 </body>
 </html>
