--- a/ListeDePrenom/index.html
+++ b/ListeDePrenom/index.html
@@ -2,11 +2,13 @@
 <html>
 
 <head>
+	<link rel="stylesheet" type="text/css" href="./stylesheet.css">
 	<title>Liste de prénom</title>
 </head>
 
 <body>
 	<header>
+		<img src="./guada.jpg">
 		<nav>
 			<a href="#">A</a>
 			<a href="#">B</a>
@@ -15,11 +17,8 @@
 	</header>
 	<ul>
 		<li>Damien</li>
-<<<<<<< HEAD
 		<li>Grégoire</li>
-=======
 		<li>Audrey</li>
->>>>>>> bd2eda9200cd069283e9cea3fa0e210ed7db1c08
 	</ul>
 </body>
 
