Modification du Header

--- a/ListeDePrenom/index.html
+++ b/ListeDePrenom/index.html
@@ -10,9 +10,9 @@
 	<header>
 		<img src="./guada.jpg">
 		<nav>
-			<a href="#">A</a>
-			<a href="#">B</a>
-			<a href="#">C</a>
+			<a href="#">A comme Abeille</a>
+			<a href="#">B comme Babeille</a>
+			<a href="#">C comme Cabeille</a>
 		</nav>
 	</header>
 	<ul>
@@ -20,6 +20,7 @@
 		<li>Céline</li>
 		<li>Grégoire</li>
 		<li>Audrey</li>
+		 
 	</ul>
 </body>
 
