Ajout d'un fichier js

--- a/ListeDePrenom/index.html
+++ b/ListeDePrenom/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="./stylesheet.css" />
+    <title>Liste de prénom</title>
+  </head>
 
-<head>
-	<link rel="stylesheet" type="text/css" href="./stylesheet.css">
-	<title>Liste de prénom</title>
-</head>
-
-<body>
-	<header>
-		<img src="./guada.jpg">
-		<nav>
-			<a href="#">A</a>
-			<a href="#">B</a>
-			<a href="#">C</a>
-		</nav>
-	</header>
-	<ul>
-		<li>Damien</li>
-		<li>Céline</li>
-		<li>Grégoire</li>
-		<li>Audrey</li>
-	</ul>
-</body>
-
+  <body>
+    <header>
+      <img src="./guada.jpg" />
+      <nav>
+        <a href="#">A</a>
+        <a href="#">B</a>
+        <a href="#">C</a>
+      </nav>
+    </header>
+    <ul>
+      <li>Damien</li>
+      <li>Céline</li>
+      <li>Grégoire</li>
+      <li>Audrey</li>
+    </ul>
+    <script src="index.js"></script>
+  </body>
 </html>
