Préparation de l'ajout de nouveaux prénom depuis la page HTML

--- a/ListeDePrenom/index.html
+++ b/ListeDePrenom/index.html
@@ -16,7 +16,12 @@
 			<a href="#">C comme Cabeille</a>
 		</nav>
 	</header>
-	<ul>
+	<div id="nouveauPrenom">
+		Quel prénom voulez-vous ajouter ?
+		<input id="saisiePrenom"></input>
+		<button id="ajoutPrenom">Ajouter le prénom</button>
+	</div>
+	<ul id="listePrenoms">
 		<li>Damien</li>
 		<li>Chaima</li>
 		<li>Grégoire</li>
