Présentation de la team

--- a/ListeDePrenom/index2.html
+++ b/ListeDePrenom/index2.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title> Bienvenue dans la team ! </title>
 </head>
 <body>
-
+	<ul>
+		<li>Céline  </li>
+	
+	
+	</ul> 
+	<p> Pour rejoindre la Team tu n'as pas besoin d'être exceptionnel</p> 
+	<p> Tu dois avoir la Niac !!!!!!!!!</p> 
+	
+		
 </body>
 </html>
