--- a/ListeDePrenom/index2.html
+++ b/ListeDePrenom/index2.html
@@ -10,7 +10,21 @@
 <ul>
 	<li>Chaima</li>
 	<li>Damien</li>
-  <li>Céline</li>
+	<li>Céline</li>
 </ul>
+ <form action="/ma-page-de-traitement" method="post">
+    <div>
+        <label for="name">Nom :</label>
+        <input type="text" id="name" name="user_name">
+    </div>
+    <div>
+        <label for="mail">e-mail :</label>
+        <input type="email" id="mail" name="user_mail">
+    </div>
+    <div>
+        <label for="msg">Message :</label>
+        <textarea id="msg" name="user_message"></textarea>
+    </div>
+</form>
 </body>
 </html>
