--- a/ListeDePrenom/index2.html
+++ b/ListeDePrenom/index2.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Nom</title>
 	<title> Bienvenue dans la team ! </title>
 </head>
+
 <body>
-	<p> Pour rejoindre la Team tu n'as pas besoin d'être exceptionnel</p> 
-	<p> Tu dois avoir la Niac !!!!!!!!!</p> 
-<ul>
-	<li>Chaima</li>
-	<li>Damien</li>
-  <li>Céline</li>
-</ul>
+	<p> Pour rejoindre la Team tu n'as pas besoin d'être exceptionnel</p>
+	<p> Tu dois avoir la Niac !!!!!!!!!</p>
+	<ul>
+		<li>Chaima</li>
+		<li>Damien</li>
+		<li>Céline</li>
+		<li>Audrey</li>
+	</ul>
 </body>
+
 </html>
