Mise à jour du style

--- a/ListeDePrenom/index2.html
+++ b/ListeDePrenom/index2.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-	<title>Nom</title>
-	<title> Bienvenue dans la team ! </title>
+		<title style="color:red;padding:30px;"> Bienvenue dans la team ! </title>
 </head>
 
 <body>
@@ -17,20 +16,22 @@
 	<li>Céline</li>	
 </ul>
 
-	<form action="/ma-page-de-traitement" method="post">
-		<div>
-			<label for="name">Nom :</label>
-			<input type="text" id="name" name="user_name">
-		</div>
-		<div>
-			<label for="mail">e-mail :</label>
-			<input type="email" id="mail" name="user_mail">
-		</div>
-		<div>
-			<label for="msg">Message :</label>
-			<textarea id="msg" name="user_message"></textarea>
-		</div>
-	</form>
+ <form action="/ma-page-de-traitement" method="post">
+    <div>
+        <label for="name">Nom :</label>
+        <input type="text" id="name" name="user_name">
+    </div>
+    <div>
+        <label for="mail">e-mail :</label>
+        <input type="email" id="mail" name="user_mail">
+    </div>
+    <div>
+        <label for="msg">Message :</label>
+        <textarea id="msg" name="user_message"></textarea>
+    </div>
+</form>
+<img src="./guada.jpg">
+
 </body>
 
 </html>
